# saldo-positivo-service/src/main/java/br/com/saldo/positivo/api/TitulosApiController.java
@@ -6,6 +6,7 @@ import javax.validation.Valid;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -14,11 +15,14 @@ import org.springframework.web.bind.annotation.RequestBody;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import br.com.saldo.positivo.bo.TituloBO;
-import br.com.sicredi.swagger.api.TitulosApi;
-import br.com.sicredi.swagger.model.LiquidacaoTitulo;
-import br.com.sicredi.swagger.model.Titulo;
+import br.com.saldo.positivo.dao.TituloDao;
+import br.com.saldo.positivo.model.Titulo;
+import br.com.saldo.positivo.swagger.api.TitulosApi;
+import br.com.saldo.positivo.swagger.model.LancamentoTitulo;
+import br.com.saldo.positivo.swagger.model.LancamentosMesResponse;
+import br.com.saldo.positivo.swagger.model.LiquidacaoTitulo;
 import io.swagger.annotations.ApiParam;
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2019-04-10T18:21:28.222Z[GMT]")
+
 @Controller
 public class TitulosApiController implements TitulosApi {
 
@@ -31,17 +35,37 @@ public class TitulosApiController implements TitulosApi {
     @Autowired
     private TituloBO tituloBO;
 
+    @Autowired
+    private TituloDao tituloDAO;
+
     @org.springframework.beans.factory.annotation.Autowired
     public TitulosApiController(ObjectMapper objectMapper, HttpServletRequest request) {
         this.objectMapper = objectMapper;
         this.request = request;
     }
 
-    public ResponseEntity<Titulo> liquidacaoTitulo(@ApiParam(value = "" ,required=true )  @Valid @RequestBody LiquidacaoTitulo body,@ApiParam(value = "",required=true) @PathVariable("id") String id) {
+    public ResponseEntity<Object> lancamentoTitulo(@ApiParam(value = "" ,required=true )  @Valid @RequestBody LancamentoTitulo body) {
+    	Titulo titulo = tituloBO.createTitulo(body);
+    	tituloDAO.insert(titulo);
+    	return ResponseEntity.ok((Object)titulo.getId());
+    }
+
+
+    public ResponseEntity<LancamentosMesResponse> lancamentosTitulo(@ApiParam(value = "",required=true) @PathVariable("ano") Integer ano,@ApiParam(value = "",required=true) @PathVariable("mes") Integer mes) {
         if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
         } else {
             log.warn("ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
         }
-        return ResponseEntity.ok(tituloBO.montaTitulo());
-    }	
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+
+    public ResponseEntity<Object> liquidacaoTitulo(@ApiParam(value = "" ,required=true )  @Valid @RequestBody LiquidacaoTitulo body,@ApiParam(value = "",required=true) @PathVariable("id") String id) {
+        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+        } else {
+            log.warn("ObjectMapper or HttpServletRequest not configured in default TitulosApi interface so no example is generated");
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
 }
