# saldo-positivo-service/src/main/java/br/com/saldo/positivo/model/StatusTituloEnum.java
@@ -1,0 +1,8 @@
+package br.com.saldo.positivo.model;
+
+public enum StatusTituloEnum {
+
+	PENDENTE,
+	PAGO
+	
+}
